require auth for decode vin
